--- a/Sobre-mí.html
+++ b/Sobre-mí.html
@@ -71,7 +71,7 @@
                   <h2 class="u-text u-text-1">Sobre Mí</h2>
                   <p class="u-text u-text-2">Soy Franco Chioato, tengo 17 años y soy de Villa Ballester, Buenos Aires, Argentina.&nbsp;<br>
                     <br>Me defino como un tipo piola, uno de esos locos que no paran un segundo, que está siempre haciendo algo, aprendiendo cosas nuevas, ayudando a alguien, participando en algún proyecto o concurso, o creando una página web, ¿Por qué no?<br>
-                    <br>Desde chico que hay algo adentro mío, una llama, una necesidad de ir más allá, de cuestionarme todo y buscar siempre la manera de alcanzar nuevos horizontes, dejando que los limites los ponga la vida, nunca yo.<br>
+                    <br>Desde chico que hay algo adentro mío, una llama, una necesidad de ir más allá, de cuestionarme todo y buscar siempre la manera de alcanzar nuevos horizontes, dejando que los límites los ponga la vida, nunca yo.<br>
                     <br>Soy Beatlemaníaco, amante de los animales y un apasionado por las ciencias. Quiero estudiar Ingeniería Aeroespacial y en mis tiempos libres me gusta buscar satélites en el cielo, aprender cosas nuevas y juntarme con mis amigos.
                   </p>
                 </div>
