--- a/The-Filter.html
+++ b/The-Filter.html
@@ -18,7 +18,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "Franco Chioato - The Filter",
+		"name": "WebSite342496",
 		"url": "index.html"
 }</script>
     <meta property="og:title" content="The Filter">
@@ -131,6 +131,5 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-266b"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Franco Chioato © 2021 - 2022 All rights reserved</p>
       </div></footer>
-    </section>
   </body>
 </html>
