--- a/Tincho.html
+++ b/Tincho.html
@@ -3,12 +3,12 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="¿Cuán fácil es tener una página web?">
+    <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Blog</title>
+    <title>Tincho</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="Blog.css" media="screen">
+<link rel="stylesheet" href="Tincho.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
@@ -20,7 +20,7 @@
 		"name": "WebSite342496",
 		"url": "index.html"
 }</script>
-    <meta property="og:title" content="Blog">
+    <meta property="og:title" content="Tincho">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#478ac9">
     <link rel="canonical" href="index.html">
@@ -61,32 +61,10 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-section-1" id="sec-7db6">
+    <section class="u-clearfix u-section-1" id="sec-2938">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h3 class="u-text u-text-default u-text-1">Blog</h3>
-        <div class="fr-view u-align-center u-clearfix u-rich-text u-text u-text-2">
-          <h5 style="text-align: left;">18 de Abril 2021. Por Franco Chioato</h5>
-          <h1 style="text-align: center;">¿Cuán fácil es tener una página web?</h1>
-          <p style="text-align: justify;">
-            <span style="font-size: 1.25rem;">Más de una persona leyendo esto estará pensando ¿Realmente puede agarrar cualquier persona y hacerse una página de un día para el otro?. La respuesta, para sorpresa de muchos, es que sí. Y tampoco es que se requiera de muchos recursos; Al contrario, Lo que más predomina es investigar, analizar las distintas opciones y ver cuál te conviene más en cuanto a el tipo de página que querés hacer, el presupuesto que tenés y las ganas de sentarte un fin de semana a probar y equivocarse. A continucación voy a detallar, muy brevemente, los pasos a seguir para crear una página de este estilo.</span>
-          </p>
-          <p style="text-align: justify;">
-            <span style="font-size: 1.25rem;">1- Pensar en como querés que sea tu página y diseñarla: En este caso va a depender mucho de tus conocimientos sobre programación y la maña que te des para hacer las cosas, en mi caso mezclé tutoriales con algunos códigos que "tomé prestados" y salió esto, que espero que con el tiempo mejore :D.</span>
-          </p>
-          <p style="text-align: justify;">
-            <span style="font-size: 1.25rem;">2- Buscarle un Dominio (Y comprarlo): Todos tenemos un número de documento, pero por razones lógicas nos asignamos nombres, que vendrían a simplificar la forma en la que nos reconocemos. Con lás páginas web sucede lo mismo, sin dominios para entrar a Facebook tendríamos que escribir en el buscador secuencias raras y poco recordables, al comprar un dominio - Como lo es <a href="//www.Facebook.com">www.Facebook.com</a> - la cosa se simplifica mucho. Allá afuera hay infinidad de páginas que comercializan estos dominios, a una infinidad de precios, pueden terminar en .com, .com.ar, .net, .org, etc.&nbsp;
-            </span>
-          </p>
-          <p style="text-align: justify;">
-            <span style="font-size: 1.25rem;">3- Hostearla: Básicamente hay que asignarle un lugar físico a la página, un pedacito de memoria en algún lugar del mundo para guardar la información, para eso hay que buscar los Hosts, que se engargan de brindarte este lugar físico para almacenar los datos, los hay también de diferentes precios y caracteristicas, hasta hay algunos gratuitos.</span>
-          </p>
-          <p style="text-align: justify;">
-            <span style="font-size: 1.25rem;">Como ven, es un proceso un tanto tedioso si no estás en el tema, pero divertido de aprender y llevar a cabo a modo de entretenimiento.</span>
-          </p>
-          <p style="text-align: justify;">
-            <br>
-          </p>
-        </div>
+        <h1 class="u-align-center u-text u-text-default u-text-1">Perdón por no contarte que tenía una página web</h1>
+        <img src="images/IMG_20201114_235828771.jpg" alt="" class="u-image u-image-default u-image-1" data-image-width="2448" data-image-height="3264">
       </div>
     </section>
     
